♻️ [Refactor] Apply Java17 to some
- Password reset html
- Env to support local test
- Review API Test ✅